--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ function notesToInts(the_note) {
 }
 
 function beatIndexFromTime(track, time) {
-    for (var i = 0; i < track.analysis.beats.length; i++) {
-        if (track.analysis.beats[i].start >= time) {
+    for (var i = 0; i < track.analysis.segments.length; i++) {
+        if (track.analysis.segments[i].start >= time) {
             return i;
         }
     }
@@ -67,18 +67,19 @@ var startingText = "...what do you think of the Seventh Symphony?";
 var easterEggs = ['roll over']; // not done yet, may never be.
 
 var currentMovement = 0;
-var mappings = [{}, {}, {}, {}];
+var mappings = {};
 var mappingIndexes = [0, 0, 0, 0];
 var formWords = [{}, {}, {}, {}];
 
 
 function parseInput(theString) {
     letters = theString.split('');
-    words = theString.split(' ');
+    lowerString = theString.toLowerCase();
+    words = lowerString.split(' ');
 
-    // we will want to strip punctuation here too
+    // Strip punctuation here
     for (var i = 0; i < words.length; i++) {
-        words[i] = words[i].toLowerCase();
+        words[i] = words[i].replace(/[\.\?,\"\'-\/#!$%\^&\*;:{}=\-_`~()]/g,"")
     }
      // Move the 'play head' based on the word before or after 'movement'
     if (words.indexOf('movement') != -1) {
@@ -87,7 +88,7 @@ function parseInput(theString) {
         if (words.indexOf('movement') > 0) {before = words[words.indexOf('movement') - 1];}
         if (words.indexOf('movement') < words.length - 1) {after = words[words.indexOf('movement') + 1]};
 
-        if (before == 'first' || before == '1st' || after == 'i' || after == '1' || after == 'one') {
+        if (before == 'first' || before == 'opening' || before == '1st' || after == 'i' || after == '1' || after == 'one') {
           currentMovement = 0;
         }
         else if (before == 'second' || before == '2nd' || after == 'ii' || after == '2' || after == 'two') {
@@ -96,7 +97,7 @@ function parseInput(theString) {
         else if (before == 'third' || before == '3rd' || after == 'iii' || after == '3' || after == 'three') {
           currentMovement = 2;
         }
-        else if (before == 'fourth' || before == 'last' ||before == '4th' || after == 'iv' || after == '4' || after == 'four') {
+        else if (before == 'fourth' || before == 'last' || before == 'final' ||before == '4th' || after == 'iv' || after == '4' || after == 'four') {
           currentMovement = 3;
         }
         else if (before == 'previous' && currentMovement != 0) {
@@ -109,10 +110,11 @@ function parseInput(theString) {
     // and then things about the form of each movement can go here
     // I will have to make this more complex:  basicaly I'll need to track the previous locations
     // within each section. 
+    /// Gah, this is hard because I have many words that mean the same thing hmrmmrmr.
 
     formKeys = Object.keys(formWords[currentMovement]);
     for (var i = 0; i < formKeys.length; i++) {
-        if (words.indexOf(formKeys[i]) != -1) {
+        if (words.indexOf(formKeys[i]) != -1 || lowerString.indexOf(formKeys[i]) != -1) {
              mappingIndexes[currentMovement] = formWords[currentMovement][formKeys[i]];
         }
     }
@@ -123,13 +125,12 @@ function parseInput(theString) {
     for (var i = 0; i < words.length; i++) {
         var word = words[i].toLowerCase();
       if (mappings[currentMovement].hasOwnProperty(word) == false) {
-          var numberOfBeats = parseInt((word.length / 3) + 1);
+          var numberOfSegs = parseInt((word.length / 3) + 1) * 3;
           var index = mappingIndexes[currentMovement];
-          //replace with tracks[currentMovement].analysis.etc...
-          mappings[currentMovement][word] = tracks[currentMovement].analysis.beats.slice(index, index + numberOfBeats);
+          mappings[word] = tracks[currentMovement].analysis.segments.slice(index, index + numberOfSegs);
           mappingIndexes[currentMovement] = mappingIndexes[currentMovement] + numberOfBeats;
         }
-        playback = playback.concat(mappings[currentMovement][word]);
+        playback = playback.concat(mappings[word]);
     }
 
     // Update the convolver
@@ -191,11 +192,31 @@ $(document).ready(function(){
     }
 
     formWords[1] = {
-        'test': 0,
+        'theme 1': 0,
+        'theme one': 0,
+        'first theme': 0,
+        'theme 2': 193,
+        'theme two': 193,
+        'second theme': 193,
+        'variation 1': 283,
+        'variation one': 283,
+        'first variation': 283,
+        'variation 2': 412,
+        'variation two': 412,
+        'second variation': 412,
+        'coda': 455
     }     
 
     formWords[2] = {
-        'test': 0,
+        'scherzo': 0,
+        'trio': 134,
+        'a section': 0,
+        'b section': 134,
+        'first a section': 0,
+        'first b section': 134,
+        'second a section': 280,
+        'second b section': 357,
+        'third a section': 460
     }     
 
     formWords[3] = {
