Multi indexing working.  BETA ONE

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ $(document).ready(function(){
                 }
                 
                 // Get beat indexes for the form chart
-                for (var i =0; i < mappingIndexes[remixIndex].length) {
+                for (var i =0; i < mappingIndexes[remixIndex].length; i++) {
             mappingIndexes[remixIndex][i] = beatIndexFromTime(tracks[remixIndex], mappingIndexes[remixIndex][i]);
                 }
 
