--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>What We Talk About When We Talk About Beethoven</title>
 
-    <!-- <link href="css/main.css" rel="stylesheet"> -->
+    <link href='http://fonts.googleapis.com/css?family=Monsieur+La+Doulaise' rel='stylesheet' type='text/css'>
+    <link href="main.css" rel="stylesheet">
 </head>
 
 <body>
@@ -312,15 +313,8 @@ $(document).ready(function(){
 
 </script>
 
-<div id="title">
-     <h2>What We Talk About When We Talk About Beethoven</h2>
-</div>
-
 <div id="splash-image">
     <img src="splash.jpg">
-</div>
-
-<div id="info">
 </div>
 
 <div id="text-log">
@@ -331,12 +325,18 @@ $(document).ready(function(){
     </textarea>
 </div>
 
-<div id="buttons">
+<div id="title">
+What We Talk About When We Talk About Beethoven
 </div>
 
+<div id="info">
+</div>
+
+
 <div id="about">
-<p> What We Talk About When We Talk About Beethoven is a piece for human and human, or human and chatbot.</p>
-<p> WWTAWWTAB works best in Chrome.</p>
+<p> What We Talk About When We Talk About Beethoven is a piece for human and human.  </p>
+<p>Exchange messages, one by one, on the topic given above. </p>
+<p id="about">WWTAWWTAB works best in Chrome. Powered by The Echo Nest & remix.js</p>
 </div>
 </body>
 
