Final size and length tweaks

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ function parseInput(theString) {
     for (var i = 0; i < words.length; i++) {
         var word = words[i].toLowerCase();
       if (mappings.hasOwnProperty(word) == false) {
-          var numberOfBeats = parseInt((word.length / 3) + 1);
+          var numberOfBeats = parseInt((word.length / 4) + 1);
           var index = mappingIndexes[currentMovement][currentSubsection];
           mappings[word] = tracks[currentMovement].analysis.beats.slice(index, index + numberOfBeats);
           mappingIndexes[currentMovement][currentSubsection] = mappingIndexes[currentMovement][currentSubsection] + numberOfBeats;
@@ -184,7 +184,7 @@ function parseInput(theString) {
             // tweak image on discontinuties
             xFrom = Math.floor(playback[i].start * 369 * j) % 369;
             yFrom = Math.floor(playback[i].start * 482 * i) % 482;
-            size = Math.floor(playback[i].duration * 10);
+            size = Math.ceil(playback[i].duration * 1.618 * (i + 1));
             var imgData = canvasContext.getImageData(xFrom, yFrom, size, size);
             xTo = Math.floor(playback[i + 1].start * 369 * i) % 369;
             yTo = Math.floor(playback[i + 1].start * 482 * j) % 482;
